fixtures/frontend/milestone-2/invalid/unknown-imported-names/aivi/network.aivi
val http = "http"
val socket = "socket"

export http
export socket
